syntax = "proto3";

package api.server.v1;

import "api/server/v1/model.proto";

enum BuildStatus {
  BUILD_STATUS_UNSPECIFIED = 0;
  BUILD_STATUS_PENDING = 1;
  BUILD_STATUS_BUILDING = 2;
  BUILD_STATUS_SUCCESS = 3;
  BUILD_STATUS_FAILED = 4;
}

service AdminService {
  rpc CreateChallenge(CreateChallengeRequest) returns (CreateChallengeResponse);
  rpc UpdateChallenge(UpdateChallengeRequest) returns (UpdateChallengeResponse);
  rpc UploadChallengeImage(UploadChallengeImageRequest) returns (UploadChallengeImageResponse);
  rpc DeleteChallenge(DeleteChallengeRequest) returns (DeleteChallengeResponse);
  rpc ListChallenges(ListChallengesRequest) returns (ListChallengesResponse);
  rpc GetChallenge(GetChallengeRequest) returns (GetChallengeResponse);
  rpc ListBuildLogs(ListBuildLogsRequest) returns (ListBuildLogsResponse);
  rpc GetBuildLog(GetBuildLogRequest) returns (GetBuildLogResponse);
  rpc StreamBuildLog(StreamBuildLogRequest) returns (stream StreamBuildLogResponse);
  rpc UploadAttachment(UploadAttachmentRequest) returns (UploadAttachmentResponse);
  rpc DeleteAttachment(DeleteAttachmentRequest) returns (DeleteAttachmentResponse);
}

message CreateChallengeRequest {
  ChallengeRequest challenge = 1;
}

message CreateChallengeResponse {
  string challenge_id = 1;
  string error_message = 2;
}

message UpdateChallengeRequest {
  Challenge challenge = 1;
}

message UpdateChallengeResponse {
  string error_message = 1;
}

message UploadChallengeImageRequest {
  string challenge_id = 1;
  bytes image_data = 2;
}

message UploadChallengeImageResponse {
  string job_id = 1;
  string error_message = 2;
}

message DeleteChallengeRequest {
  string challenge_id = 1;
}

message DeleteChallengeResponse {
  string error_message = 1;
}

message ListChallengesRequest {}

message ListChallengesResponse {
  repeated Challenge challenges = 1;
  string error_message = 2;
}

message GetChallengeRequest {
  string challenge_id = 1;
}

message GetChallengeResponse {
  Challenge challenge = 1;
  string error_message = 2;
}

message BuildLogSummary {
  string job_id = 1;
  string challenge_id = 2;
  BuildStatus status = 3;
  string created_at = 4;
  string completed_at = 5;
}

message ListBuildLogsRequest {
  string challenge_id = 1; // optional, filter by challenge
}

message ListBuildLogsResponse {
  repeated BuildLogSummary logs = 1;
  string error_message = 2;
}

message GetBuildLogRequest {
  string job_id = 1;
}

message GetBuildLogResponse {
  string job_id = 1;
  string log_content = 2;
  BuildStatus status = 3;
  string error_message = 4;
}

message StreamBuildLogRequest {
  string job_id = 1;
}

message StreamBuildLogResponse {
  string log_line = 1;
  BuildStatus status = 2;
  bool is_complete = 3;
}

message UploadAttachmentRequest {
  string challenge_id = 1;
  string filename = 2;
  bytes data = 3;
}

message UploadAttachmentResponse {
  Attachment attachment = 1;
  string error_message = 2;
}

message DeleteAttachmentRequest {
  string challenge_id = 1;
  string attachment_id = 2;
}

message DeleteAttachmentResponse {
  string error_message = 1;
}

service AdminAuthService {
  rpc AdminLogin(AdminLoginRequest) returns (AdminLoginResponse);
  rpc AdminLogout(AdminLogoutRequest) returns (AdminLogoutResponse);
}

message AdminLoginRequest {
  string password = 1;
}

message AdminLoginResponse {}
message AdminLogoutRequest {}
message AdminLogoutResponse {}
